[gd_scene load_steps=18 format=2]

[ext_resource path="res://Arrow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://TileMap.gd" type="Script" id=3]
[ext_resource path="res://AtariFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://backgroundtileset.png" type="Texture" id=5]
[ext_resource path="res://InGame.wav" type="AudioStream" id=6]
[ext_resource path="res://Archer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Snake.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 10, 10, 0, 10, 0, 0, 10, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 10, 10, 0, 10, 0, 0, 10, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 10, 10, 0, 10, 0, 0, 10, 0 )

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 10, 10, 0, 10, 0, 0, 10, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 10, 10, 0, 10, 0, 0, 10, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=6]
vertices = PoolVector2Array( 10, 10, 0, 10, 0, 0, 10, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 10, 10, 0, 10, 0, 0, 10, 0 )

[sub_resource type="NavigationPolygon" id=8]
vertices = PoolVector2Array( 10, 10, 0, 10, 0, 0, 10, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=9]
0/name = "backgroundtileset.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 10, 10 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "backgroundtileset.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 10, 0, 10, 10 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "backgroundtileset.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 10, 10, 10 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "backgroundtileset.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 10, 10, 10, 10 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/navigation = SubResource( 4 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "backgroundtileset.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 20, 0, 10, 10 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/navigation = SubResource( 5 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "backgroundtileset.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 20, 10, 10, 10 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/navigation = SubResource( 6 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "backgroundtileset.png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 20, 10, 10 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "backgroundtileset.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 10, 20, 10, 10 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/navigation = SubResource( 8 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 220.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 9 )
cell_size = Vector2( 10, 10 )
collision_mask = 5
format = 1
tile_data = PoolIntArray( 0, -1610612734, 0, 1, -1610612734, 0, 2, -1610612734, 0, 3, -1610612734, 0, 4, -1610612734, 0, 5, -1610612734, 0, 6, -1610612734, 0, 7, -1610612734, 0, 8, -1610612734, 0, 9, -1610612734, 0, 10, -1610612734, 0, 11, -1610612734, 0, 12, -1610612734, 0, 13, -1610612734, 0, 14, -1610612734, 0, 15, -1610612734, 0, 16, -1610612734, 0, 17, -1610612734, 0, 18, -1610612734, 0, 19, -1610612734, 0, 20, -1610612734, 0, 21, -1610612734, 0, 65536, 0, 0, 65537, 1, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 1, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 1, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 1, 0, 65556, 0, 0, 65557, 1, 0, 131072, 0, 0, 131073, 1, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 1, 0, 131092, 0, 0, 131093, 1, 0, 196608, 0, 0, 196609, 0, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 1, 0, 262144, 0, 0, 262145, 0, 0, 262154, 5, 0, 262162, 3, 0, 262163, 0, 0, 262164, 0, 0, 262165, 1, 0, 327680, 0, 0, 327681, 3, 0, 327695, 4, 0, 327699, 3, 0, 327700, 0, 0, 327701, 0, 0, 393216, 0, 0, 393236, 0, 0, 393237, 0, 0, 458752, 0, 0, 458772, 3, 0, 458773, 0, 0, 524288, 0, 0, 524296, 4, 0, 524302, 7, 0, 524304, 5, 0, 524309, 0, 0, 589824, 0, 0, 589828, 5, 0, 589836, 7, 0, 589845, 0, 0, 655360, 0, 0, 655372, 6, 0, 655381, 0, 0, 720896, 0, 0, 720917, 0, 0, 786432, 0, 0, 786433, 4, 0, 786453, 0, 0, 851968, 0, 0, 851978, 5, 0, 851982, 4, 0, 851989, 0, 0, 917504, 0, 0, 917514, 7, 0, 917524, -1610612734, 0, 917525, 0, 0, 983040, 0, 0, 983045, 5, 0, 983057, 5, 0, 983060, 0, 0, 983061, 0, 0, 1048576, 0, 0, 1048577, -1073741822, 0, 1048585, -1610612729, 0, 1048593, -1610612730, 0, 1048595, -1610612734, 0, 1048596, 0, 0, 1048597, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114124, 5, 0, 1114130, -1610612734, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, -1610612734, 0, 1179651, -1610612734, 0, 1179652, -1610612734, 0, 1179653, -1610612734, 0, 1179654, -1610612734, 0, 1179655, -1610612734, 0, 1179656, -1610612734, 0, 1179657, -1610612734, 0, 1179658, -1610612734, 0, 1179659, -1610612734, 0, 1179660, -1610612734, 0, 1179661, -1610612734, 0, 1179662, -1610612734, 0, 1179663, -1610612734, 0, 1179664, -1610612734, 0, 1179665, -1610612734, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0 )
script = ExtResource( 3 )

[node name="Arrow" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 210 )
speed = 100

[node name="Snake" parent="." instance=ExtResource( 9 )]
position = Vector2( 180, 80 )

[node name="Snake2" parent="." instance=ExtResource( 9 )]
position = Vector2( 180, 100 )

[node name="Snake3" parent="." instance=ExtResource( 9 )]
position = Vector2( 180, 120 )

[node name="Archer" parent="." instance=ExtResource( 7 )]
position = Vector2( 30, 50 )

[node name="Archer2" parent="." instance=ExtResource( 7 )]
position = Vector2( 30, 70 )

[node name="Archer3" parent="." instance=ExtResource( 7 )]
position = Vector2( 30, 90 )

[node name="Archer4" parent="." instance=ExtResource( 7 )]
position = Vector2( 30, 110 )

[node name="Archer5" parent="." instance=ExtResource( 7 )]
position = Vector2( 30, 130 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 60.0
margin_top = 70.0
margin_right = 160.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 4 )
text = "Game Over"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelWait" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
[connection signal="timeout" from="LevelWait" to="." method="_on_LevelWait_timeout"]
